# fx

./: Cargo.toml  README.md
.github/workflows/: check.yml  scheduled.yml  test.yml
src/: data.rs  files.rs  hash.rs  lib.rs  main.rs  path.rs  tracing.rs
src/cmd/: dang.rs  dups.rs  loops.rs  mod.rs  top.rs
tests/: dups.rs
